# publix

./: .env.example  .gitignore  .replit  ADD_GOOGLE_API_KEY.md  ALTERNATIVE_SOLUTIONS.md  API_QUICK_REFERENCE.md  CENSUS_API_SETUP.md  COLLECTION_IMPROVEMENTS.md  COLLECTION_STATUS.md  COLLECT_ALL_STATES.md  COLLECT_DATA_GUIDE.md  COLLECT_DATA_NOW.md  DATA_COLLECTION_EXPANSION.md  DATA_COLLECTION_IMPLEMENTATION_SUMMARY.md  DATA_SOURCE_OPTIONS.md  DEPLOYMENT_STATUS.md  DIRECT_SCRAPING_SETUP.md  ENABLE_PLACES_API_NEW.md  ENV_SETUP.md  FIX_DATA_INPUT.md  FIX_SCRAPER_ISSUES.md  FRONTEND_IMPROVEMENTS.md  GOOGLE_PLACES_SETUP.md  HOW_TO_POPULATE_DATA.md  IMPLEMENTING_SCRAPERS.md  NEXT_STEPS.md  NEXT_STEPS_REPLIT.md  PLAYWRIGHT_SETUP.md  QUICK_SCRAPER_TEST.md  QUICK_START.md  README.md  READY_TO_COLLECT.md  REPLIT_DEPLOYMENT.md  REPLIT_GIT_COMMIT.md  REPLIT_QUICKSTART.md  S3_DATA_UPLOAD.md  SETUP.md  SMARTY_API_INTEGRATION.md  START_COLLECTING_DATA.md  TROUBLESHOOT_DATA_INPUT.md  (+4 more)
backend/: INSTALL_RUST.md  README.md  alembic.ini  pyproject.toml  run.sh  setup-env.sh  test_langsmith.py
backend/alembic/: env.py
backend/alembic/versions/: 1e2c27ba7c73_initial_migration.py  3bf360c86bbf_add_new_data_collection_tables.py  c3d28223380a_add_parcel_zoning_and_planning_models.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  analyst.py  data_collector.py  orchestrator.py  reporter.py  site_evaluator.py
backend/app/api/: analytics_routes.py  models.py  routes.py
backend/app/models/: schemas.py
backend/app/services/: analytics_service.py  census_service.py  (+20 more)
(+79 files in other folders)
